--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ authors = [
     { name = "kitsuya0828", email = "kitsuyaazuma@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+  "torch>=2.5.1",
+  "torchvision>=0.20.1",
+]
 
 [build-system]
 requires = ["hatchling"]
