--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,20 @@
 [project]
 name = "blazefl"
-version = "0.1.0b3"
+version = "0.1.0b4"
 description = "A blazing-fast and lightweight simulation framework for Federated Learning."
 readme = "README.md"
 authors = [
     { name = "kitsuya0828", email = "kitsuyaazuma@gmail.com" }
 ]
 requires-python = ">=3.12"
+classifiers = [
+  "License :: OSI Approved :: Apache Software License",
+
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3 :: Only",
+]
 dependencies = [
   "torch>=2.5.1",
   "torchvision>=0.20.1",
