--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,13 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
 [dependency-groups]
 dev = [
     "mypy>=1.13.0",
+    "pytest>=8.3.4",
     "ruff>=0.8.2",
 ]
 
