--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Run ruff
-        run: uv run ruff --check src
+        run: uv run ruff check --output-format=github src
 
       - name: Run mypy
         run: uv run mypy src
