--- a/.github/workflows/sphinx.yaml
+++ b/.github/workflows/sphinx.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Install the project
         run: uv sync --group docs
 
-      - run: sphinx-build -M html docs/source docs/build
+      - run: uv run sphinx-build -M html docs/source docs/build
 
       - uses: actions/upload-artifact@v4
         with:
