--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ docs = [
     "sphinx-book-theme>=1.1.3",
     "sphinx>=8.1.3",
     "myst-parser>=4.0.0",
+    "sphinx-autobuild>=2024.10.3",
 ]
 
 [tool.ruff.lint]
