--- a/docs/Makefile
+++ b/docs/Makefile
@@ -15,7 +15,7 @@ help:
 .PHONY: help Makefile
 
 autobuild:
-	sphinx-autobuild $(SOURCEDIR) $(BUILDDIR)/html
+	sphinx-autobuild $(SOURCEDIR) $(BUILDDIR)/html --watch $(PWD)/../src
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
