--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,9 @@ dev = [
     "ruff>=0.8.2",
 ]
 docs = [
+    "sphinx-book-theme>=1.1.3",
     "sphinx>=8.1.3",
+    "sphinx-autobuild>=2024.10.3",
 ]
 
 [tool.ruff.lint]
