--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ testpaths = ["tests"]
 [dependency-groups]
 dev = [
     "mypy>=1.13.0",
+    "pre-commit>=4.2.0",
     "psutil>=7.0.0",
     "pytest>=8.3.4",
     "ruff>=0.8.2",
