--- a/examples/quickstart-fedavg/pyproject.toml
+++ b/examples/quickstart-fedavg/pyproject.toml
@@ -5,16 +5,31 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "blazefl>=0.1.0b6",
-    "fedlab>=1.3.0",
+    "blazefl>=1.0.2",
     "hydra-core>=1.3.2",
-    "scikit-learn>=1.6.0",
-    "tensorboard>=2.18.0",
-    "torchvision>=0.20.1",
+    "tensorboard>=2.19.0",
+    "torchvision>=0.22.0",
 ]
+
+[tool.basedpyright]
+typeCheckingMode = "standard"
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle
+    "F",  # Pyflakes
+    "UP",  # pyupgrade
+    "B",  # flake8-bugbear
+    "SIM",  # flake8-simplify
+    "I",  # isort
+]
+ignore = []
+fixable = ["ALL"]
+
+[tool.uv.sources]
+blazefl = { workspace = true }
 
 [dependency-groups]
 dev = [
     "mypy>=1.13.0",
-    "ruff>=0.8.2",
 ]
