fix: mypy ignore .pyi
Signed-off-by: kitsuyaazuma <kitsuyaazuma@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ docs = [
     "sphinx-autobuild>=2024.10.3",
 ]
 
+[tool.ruff]
+exclude = ["blazefl"]
+
 [tool.ruff.lint]
 select = [
     "E",  # pycodestyle
