--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,15 +46,14 @@ dev = [
     "psutil>=7.0.0",
     "pytest>=8.3.4",
     "ruff>=0.8.2",
+    "types-psutil>=7.0.0.20250601",
 ]
 docs = [
     "sphinx-book-theme>=1.1.3",
     "sphinx>=8.1.3",
     "sphinx-autobuild>=2024.10.3",
 ]
-test = [
-    "types-psutil>=7.0.0.20250601",
-]
+test = []
 
 [tool.ruff]
 exclude = [
