--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,10 +31,10 @@ jobs:
         run: uv sync --all-extras --dev
 
       - name: Run ruff
-        run: uv run ruff check --output-format=github src
+        run: uv run ruff check --output-format=github .
 
       - name: Run mypy
-        run: uv run mypy src
+        run: uv run mypy .
 
       - name: Run pytest
         run: uv run pytest tests
