--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ dependencies = [
   "numpy>=2.2.6",
   "torch>=2.5.1",
   "tqdm>=4.67.1",
-  "types-tqdm>=4.67.0.20241119",
 ]
 
 [build-system]
@@ -28,6 +27,13 @@ build-backend = "hatchling.build"
 
 [tool.basedpyright]
 typeCheckingMode = "standard"
+
+[tool.mypy]
+exclude = [
+    "blazefl",
+    "docs",
+    "examples",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -39,11 +45,20 @@ dev = [
     "psutil>=7.0.0",
     "pytest>=8.3.4",
     "ruff>=0.8.2",
+    "types-psutil>=7.0.0.20250601",
+    "types-tqdm>=4.67.0.20250516",
 ]
 docs = [
     "sphinx-book-theme>=1.1.3",
     "sphinx>=8.1.3",
     "sphinx-autobuild>=2024.10.3",
+]
+test = []
+
+[tool.ruff]
+exclude = [
+    "blazefl",
+    "examples",
 ]
 
 [tool.ruff.lint]
@@ -61,4 +76,5 @@ fixable = ["ALL"]
 [tool.uv.workspace]
 members = [
     "examples/quickstart-fedavg",
+    "examples/step-by-step-dsfl",
 ]
